src/tests/snapshots/lovely__tests__compiler_tests@block_expressions.lv-2.snap
---
source: src/tests/mod.rs
expression: ast
input_file: src/tests/source_files/block_expressions.lv
---
Program(
    [
        Expression {
            span: Span {
                start: 0,
                end: 31,
            },
            kind: VariableDecl {
                name: "x",
                value: Expression {
                    span: Span {
                        start: 5,
                        end: 31,
                    },
                    kind: Block(
                        [
                            Expression {
                                span: Span {
                                    start: 10,
                                    end: 12,
                                },
                                kind: Block(
                                    [],
                                ),
                            },
                            Expression {
                                span: Span {
                                    start: 16,
                                    end: 20,
                                },
                                kind: BoolLiteral(
                                    true,
                                ),
                            },
                            Expression {
                                span: Span {
                                    start: 24,
                                    end: 29,
                                },
                                kind: Infix {
                                    left: Expression {
                                        span: Span {
                                            start: 24,
                                            end: 25,
                                        },
                                        kind: IntLiteral(
                                            7,
                                        ),
                                    },
                                    operator: Minus,
                                    right: Expression {
                                        span: Span {
                                            start: 28,
                                            end: 29,
                                        },
                                        kind: IntLiteral(
                                            4,
                                        ),
                                    },
                                },
                            },
                        ],
                    ),
                },
                mutable: false,
                ty: None,
            },
        },
        Expression {
            span: Span {
                start: 33,
                end: 44,
            },
            kind: VariableDecl {
                name: "y",
                value: Expression {
                    span: Span {
                        start: 43,
                        end: 44,
                    },
                    kind: Ident(
                        "x",
                    ),
                },
                mutable: false,
                ty: Some(
                    Ident(
                        "Int",
                    ),
                ),
            },
        },
    ],
)
