src/tests/snapshots/lovely__tests__compiler_tests@functions.lv-2.snap
---
source: src/tests/mod.rs
expression: ast
input_file: src/tests/source_files/functions.lv
---
Program(
    [
        Expression {
            span: Span {
                start: 0,
                end: 45,
            },
            kind: VariableDecl {
                name: "add",
                value: Expression {
                    span: Span {
                        start: 7,
                        end: 45,
                    },
                    kind: Function {
                        parameters: [
                            FunctionParameter {
                                modifier: Read,
                                labeled_at_callsite: false,
                                internal_name: "x",
                                external_name: None,
                                ty: Ident(
                                    "Int",
                                ),
                            },
                            FunctionParameter {
                                modifier: Read,
                                labeled_at_callsite: true,
                                internal_name: "y",
                                external_name: Some(
                                    "to",
                                ),
                                ty: Ident(
                                    "Int",
                                ),
                            },
                        ],
                        return_type: Some(
                            Ident(
                                "Int",
                            ),
                        ),
                        body: Expression {
                            span: Span {
                                start: 40,
                                end: 45,
                            },
                            kind: Infix {
                                left: Expression {
                                    span: Span {
                                        start: 40,
                                        end: 41,
                                    },
                                    kind: Ident(
                                        "x",
                                    ),
                                },
                                operator: Plus,
                                right: Expression {
                                    span: Span {
                                        start: 44,
                                        end: 45,
                                    },
                                    kind: Ident(
                                        "y",
                                    ),
                                },
                            },
                        },
                    },
                },
                mutable: false,
                ty: None,
            },
        },
        Expression {
            span: Span {
                start: 47,
                end: 92,
            },
            kind: VariableDecl {
                name: "add",
                value: Expression {
                    span: Span {
                        start: 54,
                        end: 92,
                    },
                    kind: Function {
                        parameters: [
                            FunctionParameter {
                                modifier: Read,
                                labeled_at_callsite: false,
                                internal_name: "x",
                                external_name: None,
                                ty: Ident(
                                    "Unit",
                                ),
                            },
                            FunctionParameter {
                                modifier: Read,
                                labeled_at_callsite: true,
                                internal_name: "y",
                                external_name: Some(
                                    "to",
                                ),
                                ty: Ident(
                                    "Unit",
                                ),
                            },
                        ],
                        return_type: Some(
                            Ident(
                                "Unit",
                            ),
                        ),
                        body: Expression {
                            span: Span {
                                start: 90,
                                end: 92,
                            },
                            kind: Block(
                                [],
                            ),
                        },
                    },
                },
                mutable: false,
                ty: None,
            },
        },
        Expression {
            span: Span {
                start: 94,
                end: 172,
            },
            kind: VariableDecl {
                name: "main",
                value: Expression {
                    span: Span {
                        start: 102,
                        end: 172,
                    },
                    kind: Function {
                        parameters: [],
                        return_type: Some(
                            Ident(
                                "Int",
                            ),
                        ),
                        body: Expression {
                            span: Span {
                                start: 116,
                                end: 172,
                            },
                            kind: Block(
                                [
                                    Expression {
                                        span: Span {
                                            start: 121,
                                            end: 139,
                                        },
                                        kind: VariableDecl {
                                            name: "x",
                                            value: Expression {
                                                span: Span {
                                                    start: 126,
                                                    end: 139,
                                                },
                                                kind: FunctionCall {
                                                    name: "add",
                                                    arguments: [
                                                        FunctionArgument {
                                                            label: None,
                                                            value: Expression {
                                                                span: Span {
                                                                    start: 130,
                                                                    end: 131,
                                                                },
                                                                kind: IntLiteral(
                                                                    4,
                                                                ),
                                                            },
                                                        },
                                                        FunctionArgument {
                                                            label: Some(
                                                                "to",
                                                            ),
                                                            value: Expression {
                                                                span: Span {
                                                                    start: 137,
                                                                    end: 138,
                                                                },
                                                                kind: IntLiteral(
                                                                    9,
                                                                ),
                                                            },
                                                        },
                                                    ],
                                                },
                                            },
                                            mutable: false,
                                            ty: None,
                                        },
                                    },
                                    Expression {
                                        span: Span {
                                            start: 144,
                                            end: 164,
                                        },
                                        kind: VariableDecl {
                                            name: "y",
                                            value: Expression {
                                                span: Span {
                                                    start: 149,
                                                    end: 164,
                                                },
                                                kind: FunctionCall {
                                                    name: "add",
                                                    arguments: [
                                                        FunctionArgument {
                                                            label: None,
                                                            value: Expression {
                                                                span: Span {
                                                                    start: 153,
                                                                    end: 155,
                                                                },
                                                                kind: Block(
                                                                    [],
                                                                ),
                                                            },
                                                        },
                                                        FunctionArgument {
                                                            label: Some(
                                                                "to",
                                                            ),
                                                            value: Expression {
                                                                span: Span {
                                                                    start: 161,
                                                                    end: 163,
                                                                },
                                                                kind: Block(
                                                                    [],
                                                                ),
                                                            },
                                                        },
                                                    ],
                                                },
                                            },
                                            mutable: false,
                                            ty: None,
                                        },
                                    },
                                    Expression {
                                        span: Span {
                                            start: 169,
                                            end: 170,
                                        },
                                        kind: Ident(
                                            "x",
                                        ),
                                    },
                                ],
                            ),
                        },
                    },
                },
                mutable: false,
                ty: None,
            },
        },
    ],
)
