src/tests/snapshots/lovely__tests__compiler_tests@functions.lv-3.snap
---
source: src/tests/mod.rs
expression: checked_program
input_file: src/tests/source_files/functions.lv
---
CheckedProgram {
    exprs: [
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "add",
                value: CheckedExpression {
                    type_id: 3,
                    data: Function {
                        parameters: [
                            CheckedFunctionParameter {
                                modifier: Read,
                                labeled_at_callsite: false,
                                internal_name: "x",
                                external_name: None,
                                variable_id: 0,
                                type_id: 0,
                            },
                            CheckedFunctionParameter {
                                modifier: Read,
                                labeled_at_callsite: true,
                                internal_name: "y",
                                external_name: Some(
                                    "to",
                                ),
                                variable_id: 1,
                                type_id: 0,
                            },
                        ],
                        return_type: 0,
                        body: CheckedExpression {
                            type_id: 0,
                            data: Infix {
                                left: CheckedExpression {
                                    type_id: 0,
                                    data: Ident {
                                        name: "x",
                                        variable_id: 0,
                                    },
                                },
                                operator: Plus,
                                right: CheckedExpression {
                                    type_id: 0,
                                    data: Ident {
                                        name: "y",
                                        variable_id: 1,
                                    },
                                },
                            },
                        },
                    },
                },
                mutable: false,
                variable_id: 2,
            },
        },
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "add",
                value: CheckedExpression {
                    type_id: 4,
                    data: Function {
                        parameters: [
                            CheckedFunctionParameter {
                                modifier: Read,
                                labeled_at_callsite: false,
                                internal_name: "x",
                                external_name: None,
                                variable_id: 3,
                                type_id: 2,
                            },
                            CheckedFunctionParameter {
                                modifier: Read,
                                labeled_at_callsite: true,
                                internal_name: "y",
                                external_name: Some(
                                    "to",
                                ),
                                variable_id: 4,
                                type_id: 2,
                            },
                        ],
                        return_type: 2,
                        body: CheckedExpression {
                            type_id: 2,
                            data: Block(
                                [],
                            ),
                        },
                    },
                },
                mutable: false,
                variable_id: 5,
            },
        },
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "main",
                value: CheckedExpression {
                    type_id: 5,
                    data: Function {
                        parameters: [],
                        return_type: 0,
                        body: CheckedExpression {
                            type_id: 0,
                            data: Block(
                                [
                                    CheckedExpression {
                                        type_id: 2,
                                        data: VariableDecl {
                                            name: "x",
                                            value: CheckedExpression {
                                                type_id: 0,
                                                data: FunctionCall {
                                                    name: "add",
                                                    arguments: [
                                                        CheckedFunctionArgument {
                                                            label: None,
                                                            value: CheckedExpression {
                                                                type_id: 0,
                                                                data: IntLiteral(
                                                                    4,
                                                                ),
                                                            },
                                                        },
                                                        CheckedFunctionArgument {
                                                            label: Some(
                                                                "to",
                                                            ),
                                                            value: CheckedExpression {
                                                                type_id: 0,
                                                                data: IntLiteral(
                                                                    9,
                                                                ),
                                                            },
                                                        },
                                                    ],
                                                    variable_id: 2,
                                                },
                                            },
                                            mutable: false,
                                            variable_id: 6,
                                        },
                                    },
                                    CheckedExpression {
                                        type_id: 2,
                                        data: VariableDecl {
                                            name: "y",
                                            value: CheckedExpression {
                                                type_id: 2,
                                                data: FunctionCall {
                                                    name: "add",
                                                    arguments: [
                                                        CheckedFunctionArgument {
                                                            label: None,
                                                            value: CheckedExpression {
                                                                type_id: 2,
                                                                data: Block(
                                                                    [],
                                                                ),
                                                            },
                                                        },
                                                        CheckedFunctionArgument {
                                                            label: Some(
                                                                "to",
                                                            ),
                                                            value: CheckedExpression {
                                                                type_id: 2,
                                                                data: Block(
                                                                    [],
                                                                ),
                                                            },
                                                        },
                                                    ],
                                                    variable_id: 5,
                                                },
                                            },
                                            mutable: false,
                                            variable_id: 7,
                                        },
                                    },
                                    CheckedExpression {
                                        type_id: 0,
                                        data: Ident {
                                            name: "x",
                                            variable_id: 6,
                                        },
                                    },
                                ],
                            ),
                        },
                    },
                },
                mutable: false,
                variable_id: 8,
            },
        },
    ],
}
