src/tests/snapshots/lovely__tests__compiler_tests@functions.lv-4.snap
---
source: src/tests/mod.rs
expression: ir_string
input_file: src/tests/source_files/functions.lv
---
ENTRY:
  add#2 := FUN#0
  add#5 := FUN#2
  main#8 := FUN#3
  goto FUN#3

FUN#0(x#0: Int, y#1: Int):
  t1 := x#0 + y#1
  ret t1

FUN#2(x#3: Unit, y#4: Unit):
  ret unit

FUN#3:
  t4 := add#2(4, 9)
  x#6 := t4
  t5 := add#5(unit, unit)
  y#7 := t5
  exit x#6
