src/tests/snapshots/lovely__tests__compiler_tests@idents.lv-2.snap
---
source: src/tests/mod.rs
expression: ast
input_file: src/tests/source_files/idents.lv
---
Program(
    [
        Expression {
            span: Span {
                start: 0,
                end: 7,
            },
            kind: VariableDecl {
                name: "a",
                value: Expression {
                    span: Span {
                        start: 5,
                        end: 7,
                    },
                    kind: IntLiteral(
                        12,
                    ),
                },
                mutable: false,
                ty: None,
            },
        },
        Expression {
            span: Span {
                start: 8,
                end: 14,
            },
            kind: VariableDecl {
                name: "b",
                value: Expression {
                    span: Span {
                        start: 13,
                        end: 14,
                    },
                    kind: IntLiteral(
                        9,
                    ),
                },
                mutable: false,
                ty: None,
            },
        },
        Expression {
            span: Span {
                start: 16,
                end: 26,
            },
            kind: VariableDecl {
                name: "c",
                value: Expression {
                    span: Span {
                        start: 21,
                        end: 26,
                    },
                    kind: Infix {
                        left: Expression {
                            span: Span {
                                start: 21,
                                end: 22,
                            },
                            kind: Ident(
                                "a",
                            ),
                        },
                        operator: Plus,
                        right: Expression {
                            span: Span {
                                start: 25,
                                end: 26,
                            },
                            kind: Ident(
                                "b",
                            ),
                        },
                    },
                },
                mutable: false,
                ty: None,
            },
        },
        Expression {
            span: Span {
                start: 28,
                end: 38,
            },
            kind: VariableDecl {
                name: "c",
                value: Expression {
                    span: Span {
                        start: 33,
                        end: 38,
                    },
                    kind: Infix {
                        left: Expression {
                            span: Span {
                                start: 33,
                                end: 34,
                            },
                            kind: Ident(
                                "c",
                            ),
                        },
                        operator: Plus,
                        right: Expression {
                            span: Span {
                                start: 37,
                                end: 38,
                            },
                            kind: IntLiteral(
                                3,
                            ),
                        },
                    },
                },
                mutable: false,
                ty: None,
            },
        },
        Expression {
            span: Span {
                start: 60,
                end: 66,
            },
            kind: VariableDecl {
                name: "x",
                value: Expression {
                    span: Span {
                        start: 65,
                        end: 66,
                    },
                    kind: Ident(
                        "c",
                    ),
                },
                mutable: false,
                ty: None,
            },
        },
    ],
)
