src/tests/snapshots/lovely__tests__compiler_tests@idents.lv-3.snap
---
source: src/tests/mod.rs
expression: checked_program
input_file: src/tests/source_files/idents.lv
---
CheckedProgram {
    exprs: [
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "a",
                value: CheckedExpression {
                    type_id: 0,
                    data: IntLiteral(
                        12,
                    ),
                },
                mutable: false,
                variable_id: 0,
            },
        },
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "b",
                value: CheckedExpression {
                    type_id: 0,
                    data: IntLiteral(
                        9,
                    ),
                },
                mutable: false,
                variable_id: 1,
            },
        },
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "c",
                value: CheckedExpression {
                    type_id: 0,
                    data: Infix {
                        left: CheckedExpression {
                            type_id: 0,
                            data: Ident {
                                name: "a",
                                variable_id: 0,
                            },
                        },
                        operator: Plus,
                        right: CheckedExpression {
                            type_id: 0,
                            data: Ident {
                                name: "b",
                                variable_id: 1,
                            },
                        },
                    },
                },
                mutable: false,
                variable_id: 2,
            },
        },
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "c",
                value: CheckedExpression {
                    type_id: 0,
                    data: Infix {
                        left: CheckedExpression {
                            type_id: 0,
                            data: Ident {
                                name: "c",
                                variable_id: 2,
                            },
                        },
                        operator: Plus,
                        right: CheckedExpression {
                            type_id: 0,
                            data: IntLiteral(
                                3,
                            ),
                        },
                    },
                },
                mutable: false,
                variable_id: 3,
            },
        },
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "x",
                value: CheckedExpression {
                    type_id: 0,
                    data: Ident {
                        name: "c",
                        variable_id: 3,
                    },
                },
                mutable: false,
                variable_id: 4,
            },
        },
    ],
}
